--- a/package.json
+++ b/package.json
@@ -3,18 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "dev": "next dev --port $PORT"
   },
   "dependencies": {
-    "next": "9.3.2",
-    "react": "16.9.0",
-    "react-dom": "16.9.0"
+    "next": "^10.0.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "@types/node": "^12.7.5",
-    "@types/react": "^16.9.2",
-    "typescript": "^3.6.3"
+    "@types/node": "^14.14.9",
+    "@types/react": "^16.9.56",
+    "typescript": "^4.1.2",
+    "vercel": "^20.1.4"
   }
 }
