--- a/package.json
+++ b/package.json
@@ -6,14 +6,11 @@
     "dev": "next dev --port $PORT"
   },
   "dependencies": {
-    "next": "^14.1.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "next": "^14.1.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.9",
-    "@types/react": "^16.9.56",
     "typescript": "^4.1.2",
-    "vercel": "^33.4.1"
+    "vercel": "^32.3.0"
   }
 }
